--- a/less/layout.less
+++ b/less/layout.less
@@ -37,7 +37,15 @@ form button.btn{
     background: @secondary-color;
     color: white;
 }
+#headingOne, #headingTwo, #headingThree h5{
+    background: none;
 
-.card button .btn {
-    background: @secondary-color;
+    button {
+    background:none;
+
+    a{
+        display: block;
+        width: 100%;
+    }
+}
 }
